--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 name: Arnaud Belcour's blog
 
+title: Arnaud Belcour's blog
+
 description: Actually more a Hello world blog than a research blog but it will grow up!
 
 url: "https://arnaudbelcour.github.io"
