Move to jekyll-theme-slate.

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Arnaud Belcour's blog
 url: "https://arnaudbelcour.github.io"
 
 github_username: ArnaudBelcour
-theme: minima
+theme: jekyll-theme-slate
