Add site.baseurl for gitlab icon. Add metadata for post. Add description to config.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Arnaud Belcour's blog
-name: Arnaud Belcour's blog
+description: Arnaud Belcour's blog
 
 url: "https://arnaudbelcour.github.io"
 baseurl: "/blog"
