Add site tile and description in head.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Arnaud Belcour's blog
-description: Arnaud Belcour's blog
+description: Another blog among the universe
 
 url: "https://arnaudbelcour.github.io"
 baseurl: "/blog"
